--- a/overlay/packages/apps/Snap/res/values/config.xml
+++ b/overlay/packages/apps/Snap/res/values/config.xml
@@ -26,4 +26,12 @@
 
     <!-- Opens front camera using openLegacy() -->
     <bool name="front_camera_open_legacy">false</bool>
+
+    <!-- This value may be tweaked to save memory on low RAM devices. The value
+         is the percentage of camera preview height/width to scale to. -->
+    <integer name="panorama_frame_size_reduction">50</integer>
+    
+     <!-- This value may be changed to true to enable the warped pano preview overlayed on top
+         of the fullscreen pano preview. -->
+    <bool name="enable_warped_pano_preview">true</bool>
 </resources>
