--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -110,6 +110,9 @@
     <string name="config_dozeComponent">com.android.systemui/com.android.systemui.doze.DozeService</string>
     <bool name="config_dozeAfterScreenOff">false</bool>
     <bool name="config_powerDecoupleInteractiveModeFromDisplay">true</bool>
+	
+	<!-- If this is true, the screen will fade off. -->
+    <bool name="config_animateScreenLights">true</bool>
 
     <!-- An Array of "[ConnectivityManager connectionType],
          [# simultaneous connection types]"  -->
