jf: Update power profile to N

--- a/overlay/frameworks/base/core/res/res/xml/power_profile.xml
+++ b/overlay/frameworks/base/core/res/res/xml/power_profile.xml
@@ -17,7 +17,7 @@
         <value>1.23</value>
         <value>1.23</value>
     </array>
-    <array name="cpu.speeds">
+    <array name="cpu.speeds.cluster0">
         <value>1890000</value>
         <value>1782000</value>
         <value>1674000</value>
@@ -35,7 +35,7 @@
         <value>384000</value>
     </array>
     <item name="cpu.idle">4</item>
-    <array name="cpu.active">
+    <array name="cpu.active.cluster0">
         <value>118</value>
         <value>113</value>
         <value>108</value>
@@ -52,6 +52,9 @@
         <value>74</value>
         <value>61</value>
     </array>
+	<array name="cpu.clusters.cores">
+      <value>4</value> <!-- cluster 0 has cpu0 -->
+  </array>
     <item name="battery.capacity">2600</item>
 	<array name="wifi.batchedscan"> <!-- mA -->
 		<value>.0002</value> <!-- 1-8/hr -->
