--- a/overlay/frameworks/base/core/res/res/xml/power_profile.xml
+++ b/overlay/frameworks/base/core/res/res/xml/power_profile.xml
@@ -53,7 +53,7 @@
         <value>61</value>
     </array>
 	<array name="cpu.clusters.cores">
-      <value>4</value> <!-- cluster 0 has cpu0 -->
+      <value>4</value>
   </array>
     <item name="battery.capacity">2600</item>
 	<array name="wifi.batchedscan"> <!-- mA -->
