--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -306,5 +306,9 @@
          hysteresis threshold. -->
     <integer name="config_autoBrightnessBrighteningLightDebounce">0</integer>
     <integer name="config_autoBrightnessDarkeningLightDebounce">0</integer>
+	
+	<!-- If enabled, capacitive keys will only light up when pressed.
+         Otherwise, the buttons will light up whenever the user interacts with the device -->
+    <bool name="config_buttonLightOnKeypressOnly">true</bool>
 
 </resources>
