--- a/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -35,15 +35,15 @@
 	30s after 2nd
 	1min after 3rd
     -->
-    <string name="doze_pulse_schedule" translatable="false">1s,26s,66s,136s</string>
+    <!--string name="doze_pulse_schedule" translatable="false">1s,26s,66s,136s</string-->
 
     <!-- Doze: pulse parameter - once faded in, how long does it stay visible? -->
     <integer name="doze_pulse_duration_visible">10000</integer>
 
     <!-- Doze: pulse parameter - how long does it take to fade in after an intent? -->
-    <integer name="doze_pulse_duration_in_intent">0</integer>
+    <!--integer name="doze_pulse_duration_in_intent">0</integer-->
 
     <!-- Doze: pulse parameter - delay to wait for the screen to wake up after an intent -->
-    <integer name="doze_pulse_delay_in_intent">0</integer>
+    <!--integer name="doze_pulse_delay_in_intent">0</integer-->
 
 </resources>
