--- a/overlay/frameworks/base/core/res/res/xml/power_profile.xml
+++ b/overlay/frameworks/base/core/res/res/xml/power_profile.xml
@@ -10,14 +10,14 @@
     <item name="wifi.scan">120</item>
     <item name="dsp.audio">35</item>
     <item name="dsp.video">205</item>
-    <item name="gps.on">0.13</item>
     <item name="radio.active">117</item>
     <item name="radio.scanning">76</item>
+    <item name="gps.on">0.13</item>
     <array name="radio.on">
         <value>1.23</value>
         <value>1.23</value>
     </array>
-    <array name="cpu.speeds.cluster0">
+    <array name="cpu.speeds">
         <value>1890000</value>
         <value>1782000</value>
         <value>1674000</value>
@@ -35,7 +35,7 @@
         <value>384000</value>
     </array>
     <item name="cpu.idle">4</item>
-    <array name="cpu.active.cluster0">
+    <array name="cpu.active">
         <value>118</value>
         <value>113</value>
         <value>108</value>
@@ -52,15 +52,5 @@
         <value>74</value>
         <value>61</value>
     </array>
-	<array name="cpu.clusters.cores">
-      <value>4</value>
-  </array>
     <item name="battery.capacity">2600</item>
-	<array name="wifi.batchedscan"> <!-- mA -->
-		<value>.0002</value> <!-- 1-8/hr -->
-		<value>.002</value>  <!-- 9-64/hr -->
-		<value>.02</value>   <!-- 65-512/hr -->
-		<value>.2</value>    <!-- 513-4,096/hr -->
-		<value>2</value>    <!-- 4097-/hr -->
-	</array>
 </device>
